--- a/docker/auth/compose.server.yml
+++ b/docker/auth/compose.server.yml
@@ -26,7 +26,7 @@ services:
       - "traefik.http.routers.libms.middlewares=traefik-forward-auth"
   
   client:
-    image: intocps/dtaas-web:0.3.2
+    image: intocps/dtaas-web:latest
     volumes:
       - ${ENV_JS_FILEPATH}:/dtaas/client/build/env.js
     labels:
