Docker system restructure

--- a/docker/dev/compose.dev.yml
+++ b/docker/dev/compose.dev.yml
@@ -14,9 +14,11 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
 
   client:
-    image: intocps/dtaas-web:latest
+    build: 
+      context: ${DTAAS_DIR}/
+      dockerfile: ${DTAAS_DIR}/docker/dev/client.dockerfile
     volumes:
-      - ${ENV_JS_FILEPATH}:/dtaas/client/build/env.js
+      - "${DTAAS_DIR}/client/config/dev.js:/dtaas/client/build/env.js"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.client.entryPoints=web"
@@ -26,6 +28,9 @@ services:
 
   libms:
     image: intocps/libms:latest
+    build: 
+      context: ${DTAAS_DIR}/
+      dockerfile: ${DTAAS_DIR}/docker/libms.dockerfile
     volumes:
       - ${DTAAS_DIR}/deploy/config/lib.docker:/dtaas/libms/.env
       - ${DTAAS_DIR}/files:/dtaas/libms/files
@@ -67,7 +72,7 @@ services:
   traefik-forward-auth:
     image: thomseddon/traefik-forward-auth:latest
     volumes:
-      - ${DTAAS_DIR}/docker/auth/conf:/conf
+      - ${OAUTH_CONF_FILEPATH}:/conf
     environment:
       - DEFAULT_PROVIDER=generic-oauth
       - PROVIDERS_GENERIC_OAUTH_AUTH_URL=${OAUTH_URL}/oauth/authorize
