--- a/docker/compose.server.yml
+++ b/docker/compose.server.yml
@@ -68,7 +68,7 @@ services:
   traefik-forward-auth:
     image: thomseddon/traefik-forward-auth:latest
     volumes:
-      - ${DTAAS_DIR}/docker/auth/conf:/conf
+      - ${OAUTH_CONF_FILEPATH}:/conf
     environment:
       - DEFAULT_PROVIDER=generic-oauth
       - PROVIDERS_GENERIC_OAUTH_AUTH_URL=${OAUTH_URL}/oauth/authorize
