--- a/docker/dev/.env
+++ b/docker/dev/.env
@@ -5,5 +5,6 @@ CLIENT_ID='xx'
 CLIENT_SECRET='xx'
 OAUTH_SECRET='random-secret-string'
 ENV_JS_FILEPATH='/home/Desktop/DTaaS/deploy/config/client/env.local.js'
+OAUTH_CONF_FILEPATH='/home/Desktop/DTaaS/docker/conf.auth'
 username1='user1'
 username2='user2'
