--- a/docker/dev/.env
+++ b/docker/dev/.env
@@ -5,6 +5,6 @@ CLIENT_ID='xx'
 CLIENT_SECRET='xx'
 OAUTH_SECRET='random-secret-string'
 CLIENT_CONFIG='/home/Desktop/DTaaS/deploy/config/client/env.local.js'
-OAUTH_CONF_FILEPATH='/home/Desktop/DTaaS/docker/conf.auth'
+OAUTH_CONF_FILEPATH='/home/Desktop/DTaaS/docker/conf.local'
 username1='user1'
 username2='user2'
