--- a/docker/.env
+++ b/docker/.env
@@ -4,6 +4,6 @@ OAUTH_URL='https://gitlab.foo.com'
 CLIENT_ID='xx'
 CLIENT_SECRET='xx'
 OAUTH_SECRET='random-secret-string'
-ENV_JS_FILEPATH='/home/Desktop/DTaaS/deploy/config/client/env.local.js'
+CLIENT_CONFIG='/home/Desktop/DTaaS/deploy/config/client/env.local.js'
 username1='user1'
 username2='user2'
