--- a/docker/.env
+++ b/docker/.env
@@ -7,3 +7,4 @@ OAUTH_SECRET='random-secret-string'
 CLIENT_CONFIG='/home/Desktop/DTaaS/deploy/config/client/env.local.js'
 username1='user1'
 username2='user2'
+username3='user3'
