--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,6 +59,7 @@ nav:
           - Desktop Robotti and RabbitMQ: user/examples/drobotti-rmqfmu/README.md
           - Water Plant and OPC-UA: user/examples/opc-ua-waterplant/README.md
           - Three Water Tanks: user/examples/three-tank/README.md
+          - Flex Cell: user/examples/flex-cell/README.md
           - Codebase: https://github.com/INTO-CPS-Association/DTaaS-examples
   - FAQ: FAQ.md
   - Developer: 
