Updates tests of runner

--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -28,8 +28,7 @@
     "runner": "./dist/src/main.js"
   },
   "files": [
-    "dist/",
-    "script/"
+    "dist/"
   ],
   "prettier": {
     "singleQuote": true
