--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -17,6 +17,7 @@
     "pretest": "npx shx cp test/config/runner.yaml runner.yaml",
     "posttest": "npx rimraf runner.yaml",
     "test": "npx cross-env NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest --coverage=true",
+    "test:e2e": "npx cross-env NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest --coverage=true --verbose=true test/app.e2e.spec.ts",
     "test:nocov": "npx cross-env NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest --coverage=false",
     "test:watchAll": "npx cross-env NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest --coverage=true --watchAll",
     "graph": "npx madge --image src.svg src && npx madge --image test.svg test"
@@ -70,6 +71,7 @@
     "@nestjs/platform-express": "^10.3.7",
     "cross-env": "^7.0.3",
     "execa": "^8.0.1",
+    "express": "^4.18.3",
     "js-yaml": "^4.1.0",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1"
