--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -74,7 +74,8 @@
     "express": "^4.18.3",
     "js-yaml": "^4.1.0",
     "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.22.4"
   },
   "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
