--- a/docker/compose.server.yml
+++ b/docker/compose.server.yml
@@ -92,3 +92,7 @@ services:
       - "traefik.http.middlewares.traefik-forward-auth.forwardauth.address=http://traefik-forward-auth:4181"
       - "traefik.http.middlewares.traefik-forward-auth.forwardauth.authResponseHeaders=X-Forwarded-User"
       - "traefik.http.services.traefik-forward-auth.loadbalancer.server.port=4181"
+
+networks:
+  default:
+    name: dtaas-network
