--- a/docker/compose.local.yml
+++ b/docker/compose.local.yml
@@ -12,6 +12,9 @@ services:
       - "80:80"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - frontend
+      - users
 
   libms:
     image: intocps/libms:latest
@@ -24,6 +27,8 @@ services:
       - "traefik.http.services.libms.loadbalancer.server.port=4001"
       - "traefik.http.routers.libms.rule= PathPrefix(`/lib`)"
       - "traefik.http.routers.libms.middlewares=traefik-forward-auth"
+    networks:
+      - frontend
 
   client:
     image: intocps/dtaas-web:latest
@@ -35,6 +40,8 @@ services:
       - "traefik.http.services.client.loadbalancer.server.port=4000"
       - "traefik.http.routers.client.middlewares=traefik-forward-auth"
       - "traefik.http.routers.client.rule=PathPrefix(`/`)"
+    networks:
+      - frontend
 
   user1:
     image: mltooling/ml-workspace-minimal:0.13.2
@@ -50,6 +57,8 @@ services:
       - "traefik.http.routers.u1.entryPoints=web"
       - "traefik.http.routers.u1.rule=PathPrefix(`/${username1}`) "
       - "traefik.http.routers.u1.middlewares=traefik-forward-auth"
+    networks:
+      - users
   
   user2:
     image: mltooling/ml-workspace-minimal:0.13.2
@@ -65,6 +74,8 @@ services:
       - "traefik.http.routers.u2.entryPoints=web"
       - "traefik.http.routers.u2.rule=PathPrefix(`/${username2}`) "
       - "traefik.http.routers.u2.middlewares=traefik-forward-auth"
+    networks:
+      - users
 
   traefik-forward-auth:
     image: thomseddon/traefik-forward-auth:latest
@@ -92,6 +103,10 @@ services:
       - "traefik.http.middlewares.traefik-forward-auth.forwardauth.address=http://traefik-forward-auth:4181"
       - "traefik.http.middlewares.traefik-forward-auth.forwardauth.authResponseHeaders=X-Forwarded-User"
       - "traefik.http.services.traefik-forward-auth.loadbalancer.server.port=4181"
+
+    networks:
+      - frontend
+      - users
 
 networks:
   frontend:
