--- a/servers/lib/config/.env.default
+++ b/servers/lib/config/.env.default
@@ -1,6 +1,6 @@
 PORT='4001'
-MODE='local' or 'gitlab'
+MODE='local'
 LOCAL_PATH ='/Users/<Username>/DTaaS/files'
 LOG_LEVEL='debug'
-APOLLO_PATH='/lib' or ''
-GRAPHQL_PLAYGROUND='false' or 'true'
+APOLLO_PATH='/lib'
+GRAPHQL_PLAYGROUND='true'
