--- a/docker/.env
+++ b/docker/.env
@@ -1,4 +1,4 @@
-DTAAS_DIR='DTAAS_DIR='/Users/<Username>/DTaaS/'
+DTAAS_DIR='/Users/<Username>/DTaaS'
 SERVER_DNS='foo.com'
 OAUTH_URL='https://gitlab.foo.com'
 CLIENT_ID='xx'
