--- a/docker/dev/.env
+++ b/docker/dev/.env
@@ -1,4 +1,4 @@
-DTAAS_DIR='/Users/<Username>/DTaaS/'
+DTAAS_DIR='/Users/<Username>/DTaaS'
 SERVER_DNS='localhost'
 OAUTH_URL='https://gitlab.com'
 CLIENT_ID='xx'
