Improves docker compose files (#660)
  - Separates networks of docker containers in order
    to improve isolation.
  - Improves docker container documentation

---------
Co-authored-by: Astitva <astitvasehgal05@gmail.com>
Co-authored-by: prasadtalasila <prasadtalasila@users.noreply.github.com>

--- a/docker/dev/.env
+++ b/docker/dev/.env
@@ -1,9 +1,9 @@
-DTAAS_DIR='/home/Desktop/DTaaS'
-SERVER_DNS='foo.com'
-OAUTH_URL='https://gitlab.foo.com'
+DTAAS_DIR='/Users/<Username>/DTaaS'
+SERVER_DNS='localhost'
+OAUTH_URL='https://gitlab.com'
 CLIENT_ID='xx'
 CLIENT_SECRET='xx'
 OAUTH_SECRET='random-secret-string'
-OAUTH_CONF_FILEPATH='/home/Desktop/DTaaS/docker/conf.local'
+OAUTH_CONF_FILEPATH='/Users/<Username>/DTaaS/docker/conf.local'
 username1='user1'
 username2='user2'
