--- a/docker/compose.server.yml
+++ b/docker/compose.server.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   traefik:
     image: traefik:v2.10
+    restart: unless-stopped
     command: 
       - "--api.insecure=true"
       - "--providers.docker=true"
@@ -12,9 +13,13 @@ services:
       - "80:80"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - frontend
+      - users
 
   libms:
     image: intocps/libms:latest
+    restart: unless-stopped
     volumes:
       - ${DTAAS_DIR}/deploy/config/lib.docker:/dtaas/libms/.env
       - ${DTAAS_DIR}/files:/dtaas/libms/files
@@ -24,9 +29,12 @@ services:
       - "traefik.http.services.libms.loadbalancer.server.port=4001"
       - "traefik.http.routers.libms.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/lib`)"
       - "traefik.http.routers.libms.middlewares=traefik-forward-auth"
+    networks:
+      - frontend
 
   client:
     image: intocps/dtaas-web:latest
+    restart: unless-stopped
     volumes:
       - ${CLIENT_CONFIG}:/dtaas/client/build/env.js
     labels:
@@ -35,9 +43,12 @@ services:
       - "traefik.http.services.client.loadbalancer.server.port=4000"
       - "traefik.http.routers.client.middlewares=traefik-forward-auth"
       - "traefik.http.routers.client.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/`)"
+    networks:
+      - frontend
 
   user1:
     image: mltooling/ml-workspace-minimal:0.13.2
+    restart: unless-stopped
     volumes:
       - ${DTAAS_DIR}/files/common:/workspace/common
       - ${DTAAS_DIR}/files/${username1}:/workspace
@@ -50,9 +61,12 @@ services:
       - "traefik.http.routers.u1.entryPoints=web"
       - "traefik.http.routers.u1.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/${username1}`)"
       - "traefik.http.routers.u1.middlewares=traefik-forward-auth"
+    networks:
+      - users
   
   user2:
     image: mltooling/ml-workspace-minimal:0.13.2
+    restart: unless-stopped
     volumes:
       - ${DTAAS_DIR}/files/common:/workspace/common 
       - ${DTAAS_DIR}/files/${username2}:/workspace
@@ -65,9 +79,12 @@ services:
       - "traefik.http.routers.u2.entryPoints=web"
       - "traefik.http.routers.u2.rule=Host(`${SERVER_DNS}`)&&PathPrefix(`/${username2}`)"
       - "traefik.http.routers.u2.middlewares=traefik-forward-auth"
+    networks:
+      - users
 
   traefik-forward-auth:
     image: thomseddon/traefik-forward-auth:latest
+    restart: unless-stopped
     volumes:
       - ${DTAAS_DIR}/docker/conf.server:/conf
     environment:
@@ -92,3 +109,12 @@ services:
       - "traefik.http.middlewares.traefik-forward-auth.forwardauth.address=http://traefik-forward-auth:4181"
       - "traefik.http.middlewares.traefik-forward-auth.forwardauth.authResponseHeaders=X-Forwarded-User"
       - "traefik.http.services.traefik-forward-auth.loadbalancer.server.port=4181"
+    networks:
+      - frontend
+      - users
+
+networks:
+  frontend:
+    name: dtaas-frontend
+  users:
+    name: dtaas-users
