--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@prasadtalasila/runner",
+  "name": "@into-cps-association/runner",
   "version": "0.0.3",
   "description": "DT Runner",
   "main": "dist/src/runner.js",
@@ -59,7 +59,7 @@
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.2",
+    "typescript": "^5.2.2",
     "webpack": "^5.90.3"
   },
   "dependencies": {
