--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@prasadtalasila/libms",
-  "version": "0.4.1",
+  "name": "@into-cps-association/libms",
+  "version": "0.4.2",
   "description": "microservices that handles request by fetching and returning the file-names and folders of given directory",
   "author": "phillip.boe.jensen@gmail.com",
   "contributors": [
@@ -35,11 +35,11 @@
     "@apollo/client": "^3.8.9",
     "@apollo/server": "^4.10.0",
     "@nestjs/apollo": "^12.0.11",
-    "@nestjs/common": "^10.3.0",
+    "@nestjs/common": "^10.3.7",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
     "@nestjs/graphql": "^12.0.11",
-    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/platform-express": "^10.3.7",
     "axios": "^1.5.1",
     "cloudcmd": "^16.17.7",
     "commander": "^11.1.0",
@@ -57,7 +57,7 @@
     "@nestjs/testing": "^10.3.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
-    "@types/node": "20.11.4",
+    "@types/node": "20.12.5",
     "@types/supertest": "^2.0.13",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
