Adds keyv dependency. Failing tests WIP

--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -74,6 +74,7 @@
     "execa": "^8.0.1",
     "express": "^4.19.2",
     "js-yaml": "^4.1.0",
+    "keyv": "^4.5.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^3.22.4"
