--- a/servers/execution/runner/package.json
+++ b/servers/execution/runner/package.json
@@ -22,9 +22,6 @@
     "test:watchAll": "npx cross-env NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 jest --coverage=true --watchAll",
     "graph": "npx madge --image src.svg src && npx madge --image test.svg test"
   },
-  "script-unused": {
-    "runner": "npx cross-env NODE_OPTIONS='--es-module-specifier-resolution=node --experimental-modules --experimental-specifier-resolution=node' NODE_NO_WARNINGS=1 node dist/src/runner.js"
-  },
   "bin": {
     "runner": "./dist/src/main.js"
   },
@@ -69,6 +66,7 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.3.7",
     "@nestjs/platform-express": "^10.3.7",
+    "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "cross-env": "^7.0.3",
     "execa": "^8.0.1",
