Makes the config path flexible - both absolute and relative.   The runner working directory is defined by the location of   the runner.yaml config file given at the runtime.

--- a/servers/execution/runner/runner.yaml.sample
+++ b/servers/execution/runner/runner.yaml.sample
@@ -1,5 +1,5 @@
 port: 5000
-location: "script" #directory location of scripts
+location: 'script' #directory location of scripts
 commands:
   - create
   - execute
