--- a/servers/execution/runner/test/config/runner.yaml
+++ b/servers/execution/runner/test/config/runner.yaml
@@ -1,4 +1,4 @@
 port: 5000
-location: "script" #directory location of scripts
+location: 'script' #directory location of scripts
 commands:
   - create
