Refactors the commander code and adds more E2E tests

--- a/servers/execution/runner/jest.config.json
+++ b/servers/execution/runner/jest.config.json
@@ -24,7 +24,7 @@
     "json",
     "ts"
   ],
-  "modulePathIgnorePatterns": ["config"],
+  "modulePathIgnorePatterns": [],
   "coverageDirectory": "<rootDir>/coverage/",
   "coverageThreshold": {
     "global": {
