count threshold increase

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -7,6 +7,7 @@ plugins:
   duplication:
     enabled: true
     config:
+      count_threshold: 3
       languages:
         typescript:
         javascript:
