--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -7,11 +7,13 @@ plugins:
   duplication:
     enabled: true
     config:
+      count_threshold: 3
       languages:
         typescript:
         javascript:
         python:
           python_version: 3
+          mass_threshold: 40
   eslint:
     enabled: true
     channel: "eslint-8"
@@ -23,6 +25,11 @@ plugins:
     enabled: true
   shellcheck:
     enabled: true
+  sonar-python:
+    enabled: true
+    checks:
+      python:S1542:
+        enabled: false
 
 exclude_patterns:
   - "**.txt"
@@ -36,3 +43,4 @@ exclude_patterns:
   - client/config/
   - servers/lib/src/types.ts
   - "deploy/config/client/env*.js"
+  - .pylintrc
